[OPIK-147] Add filters to dataset item experiment compare endpoint (#359)
* [OPIK-147] Add filters to dataset item experiment compare endpoints

* Add invalid filters tests